--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -17,9 +17,9 @@
                 <p class="lead">This is a simple chat room made by Scala and Akka</p>
                 <p class="lead">
                 <form action="chatroom.html" method="get">
-                    <input type="text" name="name" class="form-control" value="" placeholder="Your name" require/>
+                    <input type="text" name="name" class="form-control" value="" placeholder="your name" require/>
                     <div>&nbsp;</div>
-                    <button class="btn btn-lg btn-primary btn-block">Join</button>
+                    <button class="btn btn-theme btn-block">Join</button>
                 </form>
                 </p>
             </div>
