--- a/src/main/resources/web/chatroom.html
+++ b/src/main/resources/web/chatroom.html
@@ -2,15 +2,37 @@
 
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Chat Room">
+    <meta name="author" content="PhyreTsai">
     <title>Akka-Chatroom</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <link href="css/chatroom.css" rel="stylesheet">
 </head>
 <body>
-<input type="text" id="send" value="test"/>
-<button>test</button>
+<div class="site-wrapper">
+    <center>
+        <div class="site-wrapper-inner" style="width:700px;">
+
+            <aside class="mid-side">
+                <div class="chat-room-head">
+                    <h3>Chat Room</h3>
+                </div>
+                <div class="chat-space">
+                </div>
+                <footer>
+                    <div class="chat-txt">
+                        <input type="text" id="send" class="form-control" placeholder="say something">
+                    </div>
+                    <button class="btn btn-theme" id="sendButton">Send</button>
+                </footer>
+            </aside>
+        </div>
+    </center>
+</div>
 <script type="text/javascript" src="js/chatroom.js"></script>
 </body>
 </html>
