--- a/src/main/resources/web/chatroom.html
+++ b/src/main/resources/web/chatroom.html
@@ -19,9 +19,19 @@
 
             <aside class="mid-side">
                 <div class="chat-room-head">
-                    <h3>Chat Room</h3>
+                    <div class="chat-room-head-space">
+                        <h3>Chat Room</h3>
+                              <span class="pull-right position">
+                                  <button class="btn btn-warning position">
+                                      <span class="glyphicon glyphicon-log-out"></span> Leave
+                                  </button>
+                              </span>
+                    </div>
+                    <div class="chat-room-head-member"><h4>Members</h4></div>
                 </div>
-                <div class="chat-space">
+                <div class="chat-main">
+                    <div class="chat-space"></div>
+                    <div class="chat-member"></div>
                 </div>
                 <footer>
                     <div class="chat-txt">
