--- a/src/main/resources/web/chatroom.html
+++ b/src/main/resources/web/chatroom.html
@@ -21,11 +21,11 @@
                 <div class="chat-room-head">
                     <div class="chat-room-head-space">
                         <h3>Chat Room</h3>
-                              <span class="pull-right position">
-                                  <button class="btn btn-warning position">
-                                      <span class="glyphicon glyphicon-log-out"></span> Leave
-                                  </button>
-                              </span>
+                        <span class="pull-right position">
+                            <button class="btn btn-warning position" id="chat-leave">
+                                <span class="glyphicon glyphicon-log-out"></span> Leave
+                            </button>
+                        </span>
                     </div>
                     <div class="chat-room-head-member"><h4>Members</h4></div>
                 </div>
